# Weather-API

./: README.md  celerybeat-schedule.db  db.sqlite3  pyproject.toml  requirements.txt
apps/: urls.py
apps/color_codes/: admin.py  apps.py  manager.py  models.py
apps/color_codes/migrations/: 0001_initial.py  0002_colorcodes_category.py  0003_colorcodes_temp_name.py
apps/user/: admin.py  manager.py  models.py  urls.py
apps/user/api/: __init__.py  signin_api.py  signup_api.py
apps/user/migrations/: 0001_initial.py
apps/user/serializers/: __init__.py  signin_serializer.py  signup_serializer.py
apps/weather/: admin.py  models.py  tasks.py  urls.py
apps/weather/api/: __init__.py  weather_list.py
apps/weather/migrations/: 0001_initial.py  0002_cityweather_uuid.py  0003_alter_country_options_alter_region_options.py
apps/weather/serializers/: __init__.py  wether_list.py
apps/weather/services/: __init__.py  create_weather_obj.py  get_weather_service.py
config/: asgi.py  settings.py  settings_dev.py  urls.py  wsgi.py
